Add Maven config for Byte Buddy experimental mode